--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --color-primary: #B15F39;
+    --color-primary-lightest: #e7c7b8;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -11,10 +16,109 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+label,
+.btn,
+a {
+    font-family: "helvetica";
+    font-weight: 400;
+    color: #575757!important;
+    position: relative;
+}
+
+.h1 {
+    font-size: 30px;
+    font-family: "Open Sans";
+    color: #333333!important;
+    text-align: center;
+}
+
+.brand-name,
+.brand-description {
+    color: white;
+}
+
+.brand-description {
+    font-size: 70%;
+}
+
+.brand-services {
+    margin-bottom: 50px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.contact-h1 {
+    margin-bottom: 30px;
+}
+
+h2 {
+    font-size: 25px;
+    line-height: 1.4em;
+}
+
+.home-h2 {
+    position: relative;
+    margin-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--color-primary) !important;
+}
+
+.home-h2--bg-dark {
+    color: #ffffff !important;
+}
+
+h3 {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #333333!important;
+}
+
+h4 {
+    color: #333333!important;
+}
+
+p {
+    font-size: 14px;
+}
+
+.client-quote blockquote {
+    border-left-color: var(--color-primary);
+    margin-bottom: 10px;
+    font-style: italic;
+}
+
+.client-quote p,
+.client-quote figcaption {
+    font-size: 18px;
+}
+
+.client-quote figcaption {
+    color: #575757;
+}
+
+.mission-important {
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.contact-invite {
+    font-size: 18px;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none!important;
 }
 
 a:hover {
@@ -291,6 +395,8 @@ a:hover {
     font-size: 32px;
 }
 
+/************************* NAVIGATION ************************/
+
 .navbar {
     margin-bottom: 0;
     z-index: 1;
@@ -338,7 +444,7 @@ a:hover {
 
 .nav > li a:hover,
 .nav > li a:focus {
-    background: transparent;
+    background: var(--color-primary-lightest);
 }
 
 .navbar-toggle {
@@ -439,6 +545,8 @@ nav .caret {
     float: right;
 }
 
+/*-------------- (end NAVIGATION) -----------------*/
+
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -514,6 +622,8 @@ button {
     box-shadow: none;
 }
 
+/*********************** SCROLL TO TOP ************************/
+
 .scrollToTop {
     width: 40px;
     height: 40px;
@@ -533,6 +643,8 @@ button {
     font-size: 14px;
     opacity: 1;
 }
+
+/*************************** LIGHTBOX ************************/
 
 a[data-lightbox] {
     position: relative;
@@ -643,20 +755,7 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-label,
-.btn,
-a {
-    font-family: "helvetica";
-    font-weight: 400;
-    color: #575757!important;
-}
+/*------------- end LIGHTBOX ----------------*/
 
 .container {
     max-width: 1000px;
@@ -680,18 +779,9 @@ a {
     margin: auto auto auto auto;
 }
 
-p {
-    font-size: 11px;
-}
-
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
-}
-
-.h1 {
-    font-size: 20px;
-    font-family: "Open Sans";
 }
 
 .cta-hero {
@@ -708,30 +798,10 @@ p {
     margin: auto auto auto auto;
 }
 
-h2 {
-    font-size: 22px;
-    line-height: 1.4em;
-}
-
-h3 {
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    color: #333333!important;
-}
-
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
     box-shadow: 0px 0px 0px #000000;
-}
-
-h1 {
-    color: #333333!important;
-}
-
-h4 {
-    color: #333333!important;
 }
 
 .icons {
@@ -757,7 +827,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(116, 103, 69, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -775,15 +845,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: var(--color-primary);
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: var(--color-primary)!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: var(--color-primary);
     color: #FFFFFF!important;
 }
 
@@ -801,7 +871,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: var(--color-primary)!important;
 }
 
 .ltc-atomic-tangerine:hover {
@@ -826,7 +896,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 @media (max-width: 1024px) {
