--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     --color-primary-lightest: #e7c7b8;
 }
 
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 50px;
+}
+
 body {
     margin: 0;
     padding: 0;
